prevs button fixed

--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -21,6 +21,7 @@
     border-radius: 25px;
     background: $white !important;
     color: $products-bg !important;
+    z-index: 100;
 }
 
 //modal code
