--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -510,8 +510,9 @@ input:disabled + .checkmark + .text {
                         height: inherit;
                         width: inherit;
                     }
-                    height: 60px;
+                    height: 50px;
                     width: 40px;
+                    font-size: 20px;
                 }
             }
         }
