--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -16,10 +16,10 @@
 .-features {
     text-transform: lowercase;
 }
-input:disabled + .checkmark,
+input:disabled + span.checkmark,
 input:disabled + .checkmark + .text {
-    color: #ccc;
-    border-color: #ccc !important;
+    color: #b6b4b4c2;
+    border-color: #b6b4b4c2 !important;
 }
 
 .listing {
@@ -473,7 +473,7 @@ input:disabled + .checkmark + .text {
                             .filter-label {
                                 font-size: 16px;
                                 .checkmark {
-                                    border: 1px solid $white !important;
+                                    border: 1px solid $white;
 
                                     &:after {
                                         left: 4px;
