added changes for undefined caption value

--- a/resources/sass/detailOverview.scss
+++ b/resources/sass/detailOverview.scss
@@ -319,6 +319,7 @@
                 .slick-prev,
                 .slick-next {
                     z-index: 100;
+                    margin-top: -20px;
                 }
             }
         }
