features issues fixes

--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -13,9 +13,9 @@
 //         }
 //     }
 // }
-.-features {
-    text-transform: lowercase;
-}
+// .-features {
+//     text-transform: lowercase;
+// }
 input:disabled + span.checkmark,
 input:disabled + .checkmark + .text {
     color: #b6b4b4c2;
