--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -13,9 +13,12 @@
 //         }
 //     }
 // }
-// .-features {
-//     text-transform: lowercase;
-// }
+.-features {
+    // text-transform: lowercase;
+    ul {
+        padding-left: 25px !important;
+    }
+}
 input:disabled + span.checkmark,
 input:disabled + .checkmark + .text {
     color: #b6b4b4c2;
