mobile issues fixes

--- a/resources/sass/_brands.scss
+++ b/resources/sass/_brands.scss
@@ -48,3 +48,49 @@
         }
     }
 }
+@media screen and (max-width: 480px) {
+    .brands {
+        h3 {
+            font-size: 1rem;
+        }
+        .main-img {
+            padding: 5px 10px;
+        }
+        .brands-main-heading {
+            text-align: center;
+            margin: 25px;
+        }
+
+        .brands-prod-container {
+            .row {
+                .brands-prod-div {
+                    margin: 10px 0;
+
+                    .brands-product {
+                        .brands-product-img {
+                            width: 345px;
+                            // margin: 5px 0;
+                        }
+                    }
+                    .product-detail {
+                        padding: 0 10px;
+                        text-align: center;
+                    }
+                }
+
+                .prod-info {
+                    bottom: 0px;
+                    padding: 5px;
+                    width: 100%;
+                    background-color: rgba(0, 0, 0, 0.4);
+                    height: 25px;
+                    text-align: left;
+                    font-size: 14px;
+                    line-height: 14px;
+                    z-index: 100;
+                    color: $white;
+                }
+            }
+        }
+    }
+}
