--- a/resources/sass/listing.scss
+++ b/resources/sass/listing.scss
@@ -222,6 +222,10 @@ input:disabled + .checkmark + .text {
 }
 .category-listing {
     margin-top: 20px;
+    .row {
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 .category-text {
