mobile home page redesign

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -145,6 +145,10 @@ body {
         font-size: 26px;
         font-weight: 600;
     }
+    .-brands-text {
+        text-align: center;
+        font-size: 14px;
+    }
 
     .socials {
         .-icons {
@@ -153,13 +157,14 @@ body {
     }
     .brand-logos {
         padding: 0px 30px;
+        text-align: center;
 
         .brand-logo {
             padding-left: 15px;
-            width: 12%;
+            width: 100%;
 
             &.more-soon {
-                width: 25%;
+                width: 100%;
             }
         }
     }
