--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -39,7 +39,7 @@
 .homepage-main-div {
     .main {
         background-color: $background-color;
-        background-image: url("/images/homepage-sofa-img.jpeg");
+        background-image: url('/images/homepage-sofa-img.jpeg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -55,15 +55,20 @@
         width: 100%;
         padding: 0px 75px;
         text-align: right;
+
         @include media-breakpoint-down(md) {
             position: relative;
             top: 0px;
-            margin-top: 20px;
+            // margin-top: 10px;
         }
 
         .-heading {
-            font-size: 24px;
             color: $brown-text-color;
+            font-size: 20px !important;
+            border: 1px solid $border-color;
+            text-align: center;
+            margin-top: 20px;
+            background-color: $white;
         }
 
         .-depts {
@@ -73,10 +78,32 @@
                 font-size: 20px;
                 color: $black;
             }
+            .carousel-indicators {
+                li {
+                    border: 1px solid $black;
+                    border-radius: 100px;
+                    width: 10px;
+                    height: 10px;
+                    margin-bottom: -35px;
+                }
+                .active {
+                    background-color: $black;
+                }
+            }
             .carousel-inner {
+                background-color: $white;
                 .carousel-item {
+                    img {
+                        border: 1px solid $border-color;
+                        margin: 10px;
+                        padding: 2px;
+                        border-radius: 80px;
+                    }
                     .top-trending-text {
                         color: $black;
+                    }
+                    .col-sm-12 {
+                        margin-bottom: 35px;
                     }
                 }
             }
@@ -138,11 +165,6 @@
         text-align: left !important;
         padding: 0px !important;
 
-        .-heading {
-            font-size: 14px !important;
-            margin-left: 34px;
-        }
-
         .-depts {
             margin-top: 0px !important;
             max-width: 100%;
@@ -170,7 +192,20 @@
                 color: $black;
                 margin-bottom: 200px;
             }
+            .carousel-indicators {
+                li {
+                    border: 1px solid $black;
+                    border-radius: 100px;
+                    width: 10px;
+                    height: 10px;
+                    margin-bottom: -35px;
+                }
+                .active {
+                    background-color: $black;
+                }
+            }
             .carousel-inner {
+                background-color: $white;
                 .carousel-item {
                     padding: 0;
                     text-align: center;
@@ -184,15 +219,28 @@
                         color: $grey;
                         margin-left: 70px;
                     }
-                    .prod-sale-price {
-                        text-align: left !important;
-                        color: $product-price;
+                    .prod-price-div {
+                        text-align: left;
                         margin-left: 70px;
+                        .prod-sale-price {
+                            text-align: left !important;
+                            color: $product-price;
+                        }
+                        .prod-was-price {
+                            margin-left: 5px;
+                            text-decoration: line-through;
+                            color: $black;
+                        }
                     }
+
                     .top-trending-text {
                         text-align: justify !important;
                         color: $black;
                         margin: 0 70px;
+                    }
+                    h3 {
+                        font-size: 15px;
+                        font-weight: bold;
                     }
                 }
             }
@@ -215,10 +263,10 @@
 
         .brand-logos {
             .brand-logo {
-                width: 20% !important;
+                width: 100% !important;
 
                 &.more-soon {
-                    width: 30% !important;
+                    width: 100% !important;
                 }
             }
         }
