--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -207,12 +207,22 @@
             .carousel-inner {
                 background-color: $white;
                 .carousel-item {
+                    text-align: left;
                     padding: 0;
                     text-align: center;
                     margin-top: 15px;
                     img {
-                        height: 150px;
+                        width: 90%;
                         margin: 10px;
+                    }
+                    .collapse-btn {
+                        text-align: left;
+                        margin-left: 70px;
+                        margin-bottom: 25px;
+                        a {
+                            color: $black;
+                            text-decoration: none;
+                        }
                     }
                     .top-trending-site {
                         text-align: left !important;
