--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -81,8 +81,8 @@
                 li {
                     border: 1px solid $black;
                     border-radius: 100px;
-                    width: 10px;
-                    height: 10px;
+                    width: 7px;
+                    height: 7px;
                     margin-bottom: -35px;
                 }
                 .active {
@@ -92,13 +92,12 @@
             .carousel-inner {
                 .carousel-item {
                     img {
-                        border: 1px solid $border-color;
                         margin: 10px;
                         padding: 2px;
-                        border-radius: 80px;
                     }
                     .top-trending-text {
                         color: $black;
+                        font-size: 18px;
                     }
                     .col-sm-12 {
                         margin-bottom: 35px;
@@ -159,9 +158,10 @@
             background-image: none;
         }
     }
-    .category-links {
-        text-align: left !important;
-        padding: 0px !important;
+    .homepage .category-links {
+        text-align: left;
+        padding: 10px 0;
+        margin-bottom: 15px;
 
         .-depts {
             margin-top: 0px !important;
@@ -193,8 +193,8 @@
                 li {
                     border: 1px solid $black;
                     border-radius: 100px;
-                    width: 10px;
-                    height: 10px;
+                    width: 7px;
+                    height: 7px;
                     margin-bottom: -35px;
                 }
                 .active {
@@ -202,19 +202,21 @@
                 }
             }
             .carousel-inner {
+                padding-bottom: 20px;
                 .carousel-item {
                     text-align: left;
                     padding: 0;
                     text-align: center;
                     margin-top: 15px;
+                    font-size: 18px;
                     img {
                         width: 90%;
                         margin: 10px;
                     }
                     .collapse-btn {
                         text-align: left;
-                        margin-left: 70px;
-                        margin-bottom: 25px;
+                        max-width: 90%;
+                        margin: 5px auto;
                         a {
                             color: $black;
                             text-decoration: none;
@@ -222,12 +224,14 @@
                     }
                     .top-trending-site {
                         text-align: left !important;
-                        color: $grey;
-                        margin-left: 70px;
+                        color: #999999;
+                        max-width: 90%;
+                        margin: 5px auto;
                     }
                     .prod-price-div {
                         text-align: left;
-                        margin-left: 70px;
+                        max-width: 90%;
+                        margin: 5px auto;
                         .prod-sale-price {
                             text-align: left !important;
                             color: $product-price;
@@ -242,10 +246,11 @@
                     .top-trending-text {
                         text-align: justify !important;
                         color: $black;
-                        margin: 0 70px;
+                        max-width: 90%;
+                        margin: 5px auto;
                     }
                     h3 {
-                        font-size: 15px;
+                        font-size: 18px;
                         font-weight: bold;
                     }
                 }
@@ -270,6 +275,7 @@
         .brand-logos {
             .brand-logo {
                 width: 100% !important;
+                margin-bottom: 10px;
 
                 &.more-soon {
                     width: 100% !important;
