home page image change

--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -39,7 +39,7 @@
 .homepage-main-div {
     .main {
         background-color: $background-color;
-        background-image: url('/images/homepage-sofa-img.jpeg');
+        background-image: url('/images/homepage-sofa-img.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
