modal listing transition

--- a/resources/sass/homepage.scss
+++ b/resources/sass/homepage.scss
@@ -59,6 +59,7 @@
         @include media-breakpoint-down(md) {
             position: relative;
             top: 0px;
+            background: #fffff9;
             // margin-top: 10px;
         }
 
