tile and filter fixes

--- a/resources/sass/products-container.scss
+++ b/resources/sass/products-container.scss
@@ -7,17 +7,28 @@
 
         .ls-product-div {
             padding: 0px 10px;
-            text-align: center;
-            margin-bottom: 35px;
+            text-align: left;
+            margin-bottom: 40px;
             @include make-col(1, 4);
 
             a {
                 color: $secondary-color;
             }
+            .-prices {
+                font-size: 18px;
+                .-cprice {
+                    color: #b76e79;
+                    margin-right: 10px;
+                }
+
+                .-oldprice {
+                    text-decoration: line-through;
+                }
+            }
 
             .ls-product {
                 position: relative;
-                margin-bottom: 15px;
+                margin-bottom: 5px;
                 // background-image: url('../../public/images/Spinner-2s-200px.gif');
                 // background-image: url('../../public/images/Ellipsis-1.5s-194px\ \(1\).gif');
                 // background-image: url('../../public/images/Ellipsis-1.9s-200px.gif');
@@ -41,17 +52,6 @@
                     line-height: 14px;
                     z-index: 100;
                     color: $white;
-
-                    .-prices {
-                        .-cprice {
-                            color: $primary-color;
-                            margin: 10px;
-                        }
-
-                        .-oldprice {
-                            text-decoration: line-through;
-                        }
-                    }
                 }
 
                 .wishlist-icon {
@@ -74,7 +74,7 @@
 
                 .-name {
                     font-weight: bold;
-                    font-size: 14px;
+                    font-size: 18px;
                     text-align: center;
                 }
             }
